# duck-pomodoro

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-04-02-ambient-music-design.md
landing/: package-lock.json  package.json
landing/app/: PrimaryDownloadLink.tsx  globals.css  layout.tsx  page.tsx
scripts/: generate-signing-keys.mjs  normalize-updater-pubkey.mjs  tauri-build-with-updater.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/: Layout.tsx
src/components/Tasks/: TaskForm.tsx  TaskItem.tsx
src/components/Timer/: ModeSelector.tsx  TimerControls.tsx  TimerDisplay.tsx
src/hooks/: useAmbientSound.ts  useSessions.ts  useSettings.ts  useTasks.ts  useTimer.ts  useUserSounds.ts
src/lib/: database.ts  notifications.ts  sounds.ts  types.ts  updater.ts
src/pages/: HistoryPage.tsx  PomodoroPage.tsx  SettingsPage.tsx  StatsPage.tsx  TasksPage.tsx
